	Zlatanov <tzz@iglou.com>.

	The big change, of course, is the disappearance of libmej and the new
	dependency on libast, which is now distributed separately.
	
-------------------------------------------------------------------------------
Tue Oct 31 19:33:09 PST 2000	Michael Jennings <mej@eterm.org>

	Apparently AC_PREFIX() is too stupid to handle programs with hyphens
	in their names.
	
-------------------------------------------------------------------------------
Thu Nov  9 19:22:18 PST 2000	Michael Jennings <mej@eterm.org>

	Fixed the error message bug I noticed.  There's also a big5 fix from
	Chung-Yen Chang <candyz@cle.linux.org.tw>, and I got rid of some
	tiny memory leaks in the X data, the first of which was noticed by
	zed@linuxpower.org.
	
-------------------------------------------------------------------------------
Thu Nov  9 20:14:34 PST 2000	Michael Jennings <mej@eterm.org>

	Thanks to continuing help from Sung-Hyun Nam <namsh@lgic.co.kr>, I
	finally figured out the double-buffering problem people were seeing.
	And as it turns out, his original patch was correct.  So now it's
	fixed.  Many thanks for his assistance.
	
-------------------------------------------------------------------------------
Sun Nov 12 12:05:58 PST 2000	Michael Jennings <mej@eterm.org>

	Check for _MOTIF_WM_INFO instead of _MOTIF_WM_HINTS to see if the WM
	can handle MWM hints.  This is all raster's fault.
	
-------------------------------------------------------------------------------
Tue Nov 14 17:17:53 PST 2000	Michael Jennings <mej@eterm.org>

	Since someone wanted it, if no name is given but an exec line (the -e
	option) is given, the name defaults to the first word in the exec line
	instead of "Eterm-<version>".  For example, Eterm -e ssh foo would get
	the title "ssh".  NOTE:  Most Eterm themes already specify a name, so
	this will not work with those themes.
	
-------------------------------------------------------------------------------